<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.appreciated.vortex-crud</groupId>
    <artifactId>jooq-dev-platform-demo</artifactId>
    <name>vortex-crud-jooq-dev-platform-demo</name>
    <version>1.0.0-SNAPSHOT</version>
    <description>Development Platform Demo (GitHub/GitLab-like) with Custom Fields Support using jOOQ</description>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <vaadin.version>25.0.2</vaadin.version>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/>
    </parent>

    <repositories>
        <repository>
            <id>vaadin-prereleases</id>
            <url>
                https://maven.vaadin.com/vaadin-prereleases/
            </url>
        </repository>
        <repository>
            <id>Vaadin Directory</id>
            <url>https://maven.vaadin.com/vaadin-addons</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>vaadin-prereleases</id>
            <url>
                https://maven.vaadin.com/vaadin-prereleases/
            </url>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.github.appreciated.vortex-crud</groupId>
            <artifactId>jooq</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <!-- Vaadin Copilot has issues in combination with Java 21 -->
            <exclusions>
                <exclusion>
                    <artifactId>copilot</artifactId>
                    <groupId>com.vaadin</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-dev-server</artifactId>
            <version>${vaadin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.appreciated.vortex-crud.security</groupId>
            <artifactId>userstore-local</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-liquibase</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.47.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>6.9.0.202403050737-r</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>spring-boot:run</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-frontend</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>4.29.0</version>
                <configuration>
                    <!-- This allows the maven plugin and Spring boot to operate with the changelog file name-->
                    <changeLogDirectory>src/main/resources/</changeLogDirectory>
                    <changeLogFile>db/changelog/db.changelog-master.yaml</changeLogFile>
                    <url>jdbc:sqlite:${project.basedir}/dev-platform-demo.db</url>
                    <driver>org.sqlite.JDBC</driver>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>update</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- JOOQ Codegen Plugin -->
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>3.19.22</version>
                <executions>
                    <execution>
                        <id>generate-jooq</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jdbc>
                        <driver>org.sqlite.JDBC</driver>
                        <url>jdbc:sqlite:${project.basedir}/dev-platform-demo.db</url>
                    </jdbc>
                    <generator>
                        <database>
                            <name>org.jooq.meta.sqlite.SQLiteDatabase</name>
                            <forcedTypes>
                                <!-- Repository Visibility Enum -->
                                <forcedType>
                                    <userType>com.github.appreciated.vortex_crud.demo.devplatform.enums.RepositoryVisibility</userType>
                                    <converter>org.jooq.impl.EnumConverter</converter>
                                    <includeExpression>repository.visibility</includeExpression>
                                    <includeTypes>VARCHAR</includeTypes>
                                </forcedType>
                                <!-- Issue State Enum -->
                                <forcedType>
                                    <userType>com.github.appreciated.vortex_crud.demo.devplatform.enums.IssueState</userType>
                                    <converter>org.jooq.impl.EnumConverter</converter>
                                    <includeExpression>issue.state</includeExpression>
                                    <includeTypes>VARCHAR</includeTypes>
                                </forcedType>
                                <!-- Pull Request State Enum -->
                                <forcedType>
                                    <userType>com.github.appreciated.vortex_crud.demo.devplatform.enums.PullRequestState</userType>
                                    <converter>org.jooq.impl.EnumConverter</converter>
                                    <includeExpression>pull_request.state</includeExpression>
                                    <includeTypes>VARCHAR</includeTypes>
                                </forcedType>
                                <!-- Priority Enum -->
                                <forcedType>
                                    <userType>com.github.appreciated.vortex_crud.demo.devplatform.enums.Priority</userType>
                                    <converter>org.jooq.impl.EnumConverter</converter>
                                    <includeExpression>issue.priority</includeExpression>
                                    <includeTypes>VARCHAR</includeTypes>
                                </forcedType>
                            </forcedTypes>
                        </database>
                        <target>
                            <packageName>com.github.appreciated.vortex_crud.demo.devplatform.jooq</packageName>
                            <directory>target/generated-sources</directory>
                        </target>
                    </generator>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.xerial</groupId>
                        <artifactId>sqlite-jdbc</artifactId>
                        <version>3.47.1.0</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>production</id>
            <dependencies>
                <dependency>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-core</artifactId>
                    <exclusions>
                        <exclusion>
                            <groupId>com.vaadin</groupId>
                            <artifactId>vaadin-dev</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.vaadin</groupId>
                        <artifactId>vaadin-maven-plugin</artifactId>
                        <version>${vaadin.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>build-frontend</goal>
                                </goals>
                                <phase>compile</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <optimizeBundle>false</optimizeBundle>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
